--- a/css/user.less
+++ b/css/user.less
@@ -24,18 +24,14 @@
     }
     .orders{
         .order{
-            &:after{
-                position: absolute;
-                content: " ";
-                bottom: 0;
-                left: 0;
-                width: 100%;
-                height: 2px;
-                background-color: #ffbd3f;
-            }
-            padding: 20px 0;
+//            padding: 20px 0px;
+            margin-bottom: 5px;
+            margin-left: 0px;
+            margin-right: 0;
             display: block;
             position: relative;
+            border-bottom: 3px solid #d4a63e;
+
             .col-xs-1{
                 padding: 0;
             }
@@ -55,7 +51,7 @@
             }
             .order-info{
                 display: none;
-                height: 150px;
+                //height: 150px;
                 margin-top: 20px;
 
                 position: relative;
